hphp/hack/test/typecheck/coeffects/conformance/capability_as_context.php.exp
File "capability_as_context.php", line 4, characters 3-32:
Direct references to coeffects namespaces are not allowed (Parsing[1002])
File "capability_as_context.php", line 3, characters 46-81:
Illegal context: `\HH\Capabilities\WriteProperty`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
